# eventiq

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yml  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.docker/: Dockerfile  docker-compose.yaml
.docker/monitoring/: config.prometheus.yaml
.docker/monitoring/grafana/provisioning/datasources/: config.yaml
.github/: dependabot.yaml
.github/workflows/: docs.yml  release.yml  tests.yml
async_api/: index.html
changelog/: index.html
consumers/: index.html
docs/: async_api.md  backends.md  changelog.md  consumers.md  features.md  http.md  index.md  installation.md  middlewares.md  service.md  usage.md
docs/examples/: asyncapi.md  base.md  generic_consumer.md  prometheus.md  web.md
docs/reference/: backends.md  consumers.md  encoders.md  exceptions.md  middlewares.md
eventiq/: __init__.py  _compat.py  broker.py  cli.py  consumer.py  context.py  defaults.py  encoder.py  exceptions.py  http.py  imports.py  integration.py  logger.py  message.py  middleware.py  models.py  plugin.py  plugins.py  runner.py  service.py  settings.py  types.py  utils.py
eventiq/asyncapi/: __init__.py  _compat.py  generator.py  models.py  registry.py  utils.py
eventiq/asyncapi/v2/: generator.py  models.py
eventiq/asyncapi/v3/: generator.py  models.py
eventiq/backends/: stub.py
eventiq/backends/kafka/: __init__.py  broker.py  settings.py
eventiq/backends/nats/: __init__.py  broker.py  middlewares.py  plugins.py  settings.py
eventiq/backends/pubsub/: __init__.py  broker.py  settings.py
eventiq/backends/rabbitmq/: __init__.py  broker.py  middlewares.py  settings.py
eventiq/backends/redis/: __init__.py  broker.py  middlewares.py  plugins.py  settings.py
eventiq/config/: factory.py  models.py  settings.py
eventiq/contrib/: fastapi.py
eventiq/encoders/: __init__.py  cloudpickle.py  json.py  msgpack.py  orjson.py  pickle.py
eventiq/middlewares/: __init__.py  dataref.py  debug.py  dlx.py  error.py  healthcheck.py  opentelemetry.py  prometheus.py  retries.py  tasks.py
eventiq/utils/: __init__.py  datetime.py  enum.py  functools.py  imports.py
examples/: asyncapi.py  base.py  generic_consumer.py  logging.ini  prometheus.py  tracing.py  web.py
examples/asyncapi/: index.html
examples/base/: index.html
examples/configuration/: config.yaml
examples/configuration/app/: consumers.py  service.py
examples/docker/: Dockerfile  docker-compose.yaml  service.py
examples/generic_consumer/: index.html
examples/prometheus/: index.html
examples/web/: index.html
features/: index.html
http/: index.html
installation/: index.html
middlewares/: index.html
reference/backends/: index.html
reference/consumers/: index.html
reference/encoders/: index.html
reference/exceptions/: index.html
reference/middlewares/: index.html
search/: search_index.json
service/: index.html
tests/: __init__.py  conftest.py  test_asyncapi.py  test_brokers.py  test_consumer.py  test_encoders.py  test_models.py  test_nats_broker.py  test_service.py
usage/: index.html
